test/test_examples/syntactic_examples/syntax_error/error_statement_36.zig
// Syntax error: missing right operand

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : f64 = 5 + ;
}